kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: django
  name: django
  namespace: yournamespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: django-secrets
        image: venin6/django_app:e9dbcab43d30c136e118d5140868435c644c074e
        imagePullPolicy: IfNotPresent
        name: django-app
        volumeMounts:
        - mountPath: "/root/.postgresql/root.crt"
          name: secret-data
          subPath: root.crt
      restartPolicy: Always
      volumes:
      - name: secret-data
        secret:
          secretName: postgres
