kubernetes/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: django
  name: django
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: secrets
        image: django_app:latest
        imagePullPolicy: IfNotPresent
        name: django-app
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: django
  sessionAffinity: None
  type: NodePort
