kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django
  name: django
  namespace: yournamespace
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: django
  sessionAffinity: None
  type: ClusterIP
