kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: yournamespace
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - backend:
          service:
            name: django
            port:
              number: 80
        path: /
        pathType: Prefix
